# demo-psthala

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt
.gitlab/issue_templates/: Bug.md
.gitlab/merge_request_templates/: Default.md
docs/: RUNBOOK.md  SECURITY_AI_RED_TEAM.md
infra/: main.tf  variables.tf
src/ai/: utils.py
src/app/: main.py  models.py
src/core/: config.py  logger.py  monitoring.py
src/genai/: service.py
src/genai/prompts/: manager.py
src/llm/: evaluation.py
src/ml/: model.py
src/ml/pipelines/: training.py
src/rag/: service.py
src/rag/ingestion/: pipeline.py
src/scripts/: seed_uat_data.py
src/shared/: schemas.py
tests/: test_main.py
