[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-mlops-platform"
version = "0.1.0"
description = "Enterprise GenAI MLOps Platform on Azure"
authors = [
    {name = "Platform Team", email = "platform@example.com"},
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.10.0",
    "langchain>=0.1.5",
    "langchain-openai>=0.0.5",
    "azure-search-documents>=11.4.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]
